# la-quiniela

./: .gitignore  ModelAnalysis.ipynb  README.md  cli.py  hola.py  laliga.sqlite  pyproject.toml  requirements.txt  settings.py
analysis/: LaLiga.ipynb  LaLigaDataAnalysis-checkpoint.ipynb  LaLigaDataAnalysis.ipynb  LaLigaDataAnalysis2.html  LaLigaDataAnalysis2.ipynb  LaLigaDataAnalysis3.ipynb  ModelAnalysis.ipynb  ModelAnalysis2.ipynb  ModelConstruction.ipynb  PropostaModelConstruction.ipynb  Untitled.ipynb  data_analysis.ipynb  prova2
quiniela/: features.py  io.py  models.py  preprocessing.py  utils.py  validate.py
src/quiniela/: cli.py  io.py  models.py  settings.py
